syntax = "proto3";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "LzyWorkflowApi";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";


service LzyWorkflow {
  rpc CreateWorkflow (CreateWorkflowRequest) returns (CreateWorkflowResponse);
  rpc AttachWorkflow (AttachWorkflowRequest) returns (AttachWorkflowResponse);
  rpc FinishWorkflow (FinishWorkflowRequest) returns (FinishWorkflowResponse);
  rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse);
}


message CreateWorkflowRequest {
  string workflowName = 1;
}

message CreateWorkflowResponse {
  message Success {
    string executionId = 1;
  }

  enum ErrorCode {
    UNSPECIFIED = 0;
    BAD_REQUEST = 1;
    ALREADY_EXISTS = 2;
    ERROR = 3;
  }

  message Error {
    uint32 code = 1;
    string description = 2;
  }

  oneof kind {
    Success success = 1;
    Error error = 2;
  }
}

message AttachWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
}

message AttachWorkflowResponse {
  enum Status {
    UNSPECIFIED = 0;
    SUCCESS = 1;
    BAD_REQUEST = 2;
    NOT_FOUND = 3;
    ALREADY_EXISTS = 4;
    ERROR = 5;
  }

  uint32 status = 1;
  string description = 2;
}

message FinishWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
  string reason = 3;
}

message FinishWorkflowResponse {
  enum Status {
    UNSPECIFIED = 0;
    SUCCESS = 1;
    BAD_REQUEST = 2;
    NOT_FOUND = 3;
    ERROR = 4;
  }

  uint32 status = 1;
  string description = 2;
}

message DeleteWorkflowRequest {
  string workflowName = 1;
}

message DeleteWorkflowResponse {
  enum Status {
    UNSPECIFIED = 0;
    SUCCESS = 1;
    NOT_FOUND = 2;
    STILL_RUNNING = 3;
    ERROR = 4;
  }

  uint32 status = 1;
  string description = 2;
}
